examples/test/testpolicy2688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2688
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key4: value49
      key45: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value14
          key31: value21
          key24: value14
      podSelector:
        matchLabels:
          key37: value15
          key38: value2
          key32: value6
